--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,7 +60,7 @@ jobs:
           firebase appdistribution:distribute build/app/outputs/apk/release/appname-${{ github.ref_name }}-armeabi-v7a.apk \
             --app 1:427445952125:android:7761a2707cbef894149b14 \
             --token "${{ secrets.FIREBASE_TOKEN }}" \
-            --testers "bwias@nexdigitalstudio.com,email2@example.com"
+            --testers "biwas@nexdigitalstudio.com"
 
       # - name: Distribute iOS IPA to Firebase (optional)
       #   run: |
