--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,9 +33,8 @@ jobs:
         id: vars
         run: |
           VERSION_NAME="${GITHUB_REF_NAME#v}"  # strip leading 'v'
-          VERSION_CODE=$(date +%Y%m%d%H%M)
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
-          echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
+          echo "VERSION_CODE=$$VERSION_NAME >> $GITHUB_ENV
 
       - name: Build Android APK
         run: flutter build apk --release --build-name=$VERSION_NAME --build-number=$VERSION_CODE --split-per-abi
