--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Set version info
         id: vars
         run: |
-          VERSION_NAME="${GITHUB_REF_NAME#v}"  # strip leading 'v'
+          VERSION_NAME=${{ github.ref_name }}
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
           echo "VERSION_CODE=$$VERSION_NAME >> $GITHUB_ENV
 
